Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: startup-django
  labels:
    app: mysite
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysite
  template:
    metadata:
      labels:
        app: mysite
    spec:
      containers:
      - name: startup-djangoapp
        image: sanyam12/startup-djangoapp
        ports:
        - containerPort: 8000
