Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sanyam-ingress
  namespcae: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: yansam.com
    http: 
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: my-service
              port:
                number: 80
